[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
version = "3.0.0"
name = "pyairbnb"
description = "Fast Airbnb scraper and agent-ready search library"
requires-python = ">=3.10"
authors = [
  { name = "John Balvin", email = "johnchristian@hotmail.es" },
]
readme = "README.md"
keywords = ["airbnb", "scraper", "crawler", "mcp", "agents"]
dependencies = [
  "beautifulsoup4>=4.12",
  "curl_cffi>=0.7",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.urls]
Homepage = "https://github.com/Eldergenix/pyairbnb"
Repository = "https://github.com/Eldergenix/pyairbnb.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
